<resources>
    <string name="app_name">TokoTock</string>
    <string name="join_now">Gabung Sekarang</string>
    <string name="skip">Lewati</string>
    <string name="selanjutnya">Selanjutnya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="orregister">atau daftar dengan</string>
    <string name="orlogin">atau masuk dengan</string>
    <string name="tnc_auth">Dengan masuk disini, kamu menyetujui Syarat &amp; Ketentuan serta Kebijakan Privasi TokoPhincon.</string>
    <string name="profil">Profil</string>
    <string name="finish">Selesai</string>
    <string name="onboard_image">onboard image</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
    <string name="transaction">Transaction</string>
    <string name="wishlist">Wishlist</string>
    <string name="store">Store</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="cart">Cart</string>
    <string name="menu">Menu</string>
    <string name="logout">Logout</string>
    <string name="en">EN</string>
    <string name="id">ID</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, sapien quis aliquam ultricies, nisl lacinia nisl, vitae aliquam nisl vitae nisl.</string>
    <string name="pp_user">pp_user</string>
</resources>